Test Cases/V2/Test Case/Tests/TT-238 - VTO/Test Cases/Negative/TT_238_2_EditCoreValues.tc
<?xml version="1.0" encoding="UTF-8"?>
<TestCaseEntity>
   <description></description>
   <name>TT_238_2_EditCoreValues</name>
   <tag></tag>
   <comment></comment>
   <testCaseGuid>f06d467a-e87e-4c72-9d06-71c3bfd03adc</testCaseGuid>
</TestCaseEntity>
